# all-dunders

./: README.md  pyproject.toml
notebooks/: t1.ipynb
src/all_dunders/: transform.py
tests/: test_transform.py
